2005-02-02  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3983628> control-click on WebView is not selecting the word under the cursor (Mail, non-editable WebView)

        Reviewed by rjw.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge selectWordBeforeMenuEvent]): new
        * WebView.subproj/WebView.m:
        (-[WebView _selectWordBeforeMenuEvent]): new SPI
        (-[WebView _setSelectWordBeforeMenuEvent:]): new SPI
        * WebView.subproj/WebViewInternal.h:
        * WebView.subproj/WebViewPrivate.h:

2005-02-02  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3986013> Assertion failure going back after page load error (no apparent problem in nondebug build)

        Reviewed by rjw.

        * WebView.subproj/WebDataSource.m:
        (-[WebDataSource _setPrimaryLoadComplete:]): don't set the data source data when the main client is nil

2005-02-02  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

        Fix for this bug:
        
        <rdar://problem/3823109> WebKit should support -toggleBaseWritingDirection: (bidi editing support)

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _applyParagraphStyleToSelection:withUndoAction:]): New function that calls through to
        new feature that allows callers to force all properties in a style to be applied as block styles.
        (-[WebHTMLView _alignSelectionUsingCSSValue:withUndoAction:]): Removed FIXME comment for something that has been fixed.
        (-[WebHTMLView toggleBaseWritingDirection:]): Implemented.

2005-02-01  Richard Williamson   <rjw@apple.com>

	Fixed <rdar://problem/3977727> WebKit should use new SPI to support faster GIF rendering

	Note:  This REQUIRES build >= 3A362 when building on Tiger.

        Reviewed by John.

        * WebCoreSupport.subproj/WebImageData.m:
        (-[WebImageData _imageSourceOptions]):

=== Safari-182 ===

2005-02-01  Richard Williamson   <rjw@apple.com>
